# localtune-console

./: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  pyproject.toml  start_localtune.bat  start_localtune.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
configs/: model_config.example.yaml
configs/dataset_templates/: chat.yaml  classification.yaml  code.yaml  dpo.yaml  extraction.yaml  instruction.yaml  qa.yaml  rewrite.yaml  summary.yaml  tool_calling.yaml
docs/: FAQ.md  FAQ.zh-CN.md  GLOSSARY.md  GLOSSARY.zh-CN.md  TROUBLESHOOTING.md  TROUBLESHOOTING.zh-CN.md  UI_UX_GUIDELINES.zh-CN.md
examples/corpus/: chat.jsonl  classification.jsonl  code.jsonl  dpo.jsonl  extraction.jsonl  (+5 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: __init__.py  check_docs.py  check_release_payload.py  convert_data.py  doctor.py  download_model.py  infer_adapter.py  merge_lora.py  prepare_project.py  quality_check.py  release_check.py  split_data.py  start_dashboard.py  train.py  validate_data.py  wait_for_dashboard.py
src/: __init__.py  config.py  constants.py  data_utils.py  env_detect.py  logging_utils.py  model_loader.py  web_dashboard.py
templates/: dashboard.html
tests/: test_config_and_data_utils.py  test_dataset_and_artifact_services.py  test_frontend_contracts.py  test_model_management.py  test_package_imports.py  test_prepare_project.py  test_recipes_and_web_api.py  test_wait_for_dashboard.py
(+33 files in other folders)
